--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/ciclost/.netbeans/21/build.properties
+user.properties.file=C:\\Users\\irene\\AppData\\Roaming\\NetBeans\\24\\build.properties
